File names and landing page

--- a/extended/ElementsToScopes.html
+++ b/extended/ElementsToScopes.html
@@ -240,9 +240,9 @@
 
         <div class="right-panel">
             <div class="tabs">
-                <a href="DocumentIngestion-PromptManagement-ScopeView.html" class="tab">Edit Prompts</a>
-                <a href="DocumentIngestion-PromptManagement-UserElementsView.html" class="tab active">Elements to Scopes</a>
-                <a href="DocumentIngestion-PromptManagement-PendingChanges.html" class="tab">Review and Publish</a>
+                <a href="PromptManagement.html" class="tab">Edit Prompts</a>
+                <a href="ElementsToScopes.html" class="tab active">Elements to Scopes</a>
+                <a href="ReviewAndPublish.html" class="tab">Review and Publish</a>
             </div>
 
         <div class="content-panel">
