--- a/extended/PromptManagement.html
+++ b/extended/PromptManagement.html
@@ -348,9 +348,9 @@
 
         <div class="right-panel">
             <div class="tabs">
-                <a href="DocumentIngestion-PromptManagement-ScopeView.html" class="tab active">Edit Prompts</a>
-                <a href="DocumentIngestion-PromptManagement-UserElementsView.html" class="tab">Elements to Scopes</a>
-                <a href="DocumentIngestion-PromptManagement-PendingChanges.html" class="tab">Review and Publish <span id="tabCounter" style="display: none;">(0)</span></a>
+                <a href="PromptManagement.html" class="tab active">Edit Prompts</a>
+                <a href="ElementsToScopes.html" class="tab">Elements to Scopes</a>
+                <a href="ReviewAndPublish.html" class="tab">Review and Publish <span id="tabCounter" style="display: none;">(0)</span></a>
             </div>
 
             <div class="scope-panel">
@@ -634,7 +634,7 @@
         function goToReview() {
             // Store the count in sessionStorage so Pending Changes can access it
             sessionStorage.setItem('pendingChangesCount', editedCells.size);
-            window.location.href = 'DocumentIngestion-PromptManagement-PendingChanges.html';
+            window.location.href = 'ReviewAndPublish.html';
         }
 
         // Select all checkbox functionality
