--- a/mvp-v2/PromptManagement.html
+++ b/mvp-v2/PromptManagement.html
@@ -636,8 +636,8 @@
 
         <div class="right-panel">
             <div class="tabs">
-                <a href="DocumentIngestion-PromptManagement-ScopeView-MVP-v2.html" class="tab active">Edit Prompts</a>
-                <a href="DocumentIngestion-PromptManagement-PendingChanges-MVP-v2.html" class="tab">Review and Publish <span id="tabCounter" style="display: none;">(0)</span></a>
+                <a href="PromptManagement.html" class="tab active">Edit Prompts</a>
+                <a href="ReviewAndPublish.html" class="tab">Review and Publish <span id="tabCounter" style="display: none;">(0)</span></a>
             </div>
 
             <div class="scope-panel">
@@ -1221,7 +1221,7 @@ Format comments with clear attribution and chronological order.</div>
         
         function goToReview() {
             sessionStorage.setItem('pendingChangesCount', editedTextareas.size);
-            window.location.href = 'DocumentIngestion-PromptManagement-PendingChanges-MVP-v2.html';
+            window.location.href = 'ReviewAndPublish.html';
         }
         
         // Scope tree functions
