--- a/mvp/ReviewAndPublish.html
+++ b/mvp/ReviewAndPublish.html
@@ -378,8 +378,8 @@
 
         <div class="right-panel">
             <div class="tabs">
-                <a href="DocumentIngestion-PromptManagement-ScopeView-MVP-v2.html" class="tab">Edit Prompts</a>
-                <a href="DocumentIngestion-PromptManagement-PendingChanges-MVP-v2.html" class="tab active">Review and Publish <span id="tabCounter" style="display: none;">(0)</span></a>
+                <a href="PromptManagement.html" class="tab">Edit Prompts</a>
+                <a href="ReviewAndPublish.html" class="tab active">Review and Publish <span id="tabCounter" style="display: none;">(0)</span></a>
             </div>
 
             <div class="grid-panel">
